crates/rupa-sql/tests/snapshots/postgres__column_to_column.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&where_(User::NICKNAME.eq(User::EMAIL)))"
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE "nickname" = "email"
