crates/rupa-sql/tests/snapshots/postgres__comparisons.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: pg(&where_(cond))
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE "id" = $1 AND "id" <> $2 AND "id" < $3 AND "id" <= $4 AND "id" > $5 AND "id" >= $6
$1 = I64(1)
$2 = I64(2)
$3 = I64(3)
$4 = I64(4)
$5 = I64(5)
$6 = I64(6)
