crates/rupa-sql/tests/snapshots/postgres__dsl_lowered_under_not_is_parenthesized.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: pg(&where_(!dsl(&ILIKE)))
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE NOT ("email" ILIKE $1)
$1 = Text("%A%")
