crates/rupa-sql/tests/snapshots/postgres__exists.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&select::<User>().filter(User::EMAIL.eq(\"a@b.c\")).exists())"
---
SELECT EXISTS (SELECT 1 FROM "app"."users" WHERE "email" = $1)
$1 = Text("a@b.c")
