crates/rupa-sql/tests/snapshots/postgres__get_by_id.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&get::<User>(&7))"
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE "id" = $1
$1 = I64(7)
