crates/rupa-sql/tests/snapshots/postgres__identifier_quoting.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: pg_stmt(&s)
---
DELETE FROM "my schema"."t""1" WHERE "we""ird" IS NULL
