crates/rupa-sql/tests/snapshots/postgres__in_empty_lists.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: pg(&where_(cond))
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE FALSE OR TRUE
