crates/rupa-sql/tests/snapshots/postgres__insert_many_with_nulls.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&insert::<User>().values([&User::sample(), &second]).affected())"
---
INSERT INTO "app"."users" ("id", "email", "nickname", "active", "created", "prefs", "old_prefs") VALUES ($1, $2, $3, $4, $5, $6, $7), ($8, $9, $10, $11, $12, $13, $14)
$1 = I64(7)
$2 = Text("a@b.c")
$3 = Null(Text)
$4 = Bool(true)
$5 = TimestampTz(2023-11-14T22:13:20Z)
$6 = Json(Object {"beta": Bool(true), "theme": String("dark")})
$7 = Null(Json)
$8 = I64(8)
$9 = Text("a@b.c")
$10 = Text("bee")
$11 = Bool(true)
$12 = TimestampTz(2023-11-14T22:13:20Z)
$13 = Json(Object {"beta": Bool(true), "theme": String("dark")})
$14 = Json(Object {"beta": Bool(false), "theme": String("light")})
